<resources>
    <string name="app_name">Hitung Jarak tempuh</string>
    <string name="bmi_intro">Jarak tempuh, hitung jarak tempuh untuk
menentukan apakah jarak jalan yang ditempuh olehmu jauh atau dekat. Cobalah sekarang!</string>
<!--    <string name="berat_badan">Berat badan (kg)</string>-->
    <string name="jarak">jarak yang ditempuh(KM)</string>

    <string name="tinggi_badan">Tinggi badan (cm)</string>
<!--    <string name="jenis_kelamin">Jenis kelamin</string>-->

    <string name="kendaraan">kendaraan yang digunakan</string>
    <string name="reset">reset</string>

<!--    <string name="pria">Pria</string>-->
<!--    <string name="wanita">Wanita</string>-->

    <string name="jalan_kaki">Jalan Kaki</string>
    <string name="mobil">Mobil</string>

    <string name="hitung">Hitung</string>
    <string name="bmi_x">BMI: %1$.2f</string>
    <string name="kurus">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Gemuk</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="berat_invalid">Berat tidak boleh kosong.</string>
    <string name="jarak_invalid">jarak tidak boleh kosong.</string>
    <string name="kendaraan_invalid">kendaraan tidak boleh kosong.</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
    <string name="gender_invalid">Pilih jenis kelamin.</string>
    <string name="jauh">jauh</string>
    <string name="dekat">dekat</string>
</resources>